fix:幫性格特性結帳都做ＡＰＩ文件的補充
