# app/Http/Controllers/OrderController.php
@@ -18,6 +18,18 @@ class OrderController extends Controller
 {
     /**
      * 訂單新增
+     * 
+     * @bodyParam total_price float required 訂單的總價格。
+     * @bodyParam payment_status string required 訂單的付款狀態。
+     * @bodyParam payment_method string required 訂單的付款方式。
+     * 
+     * @response {
+     *     "id": "新創建的訂單的ID"
+     * }
+     * 
+     * @param \App\Http\Requests\OrderRequest $request 使用者輸入的請求數據。
+     * 
+     * @return \Illuminate\Http\Response 返回新創建的訂單ID的JSON響應。
      */
     public function store(OrderRequst $request)
     {
@@ -35,6 +47,16 @@ class OrderController extends Controller
 
     /**
      * 訂單列表
+     * 
+      * @response {
+     *     "data": [
+     *         {
+     *             ...各個訂單的資料
+     *         }
+     *     ]
+     * }
+     * 
+     * @return \Illuminate\Http\Resources\Json\ResourceCollection 返回當前使用者的所有訂單的集合。
      */
     public function index()
     {
